Coffee card desgin and fetch data from db

--- a/src/components/TopOfHeader/TopOfHeader.css
+++ b/src/components/TopOfHeader/TopOfHeader.css
@@ -1,4 +1,4 @@
 .bg-header {
-    background-image: './src/assets/images/more/top-header-bg-01.png';
-    position: relative;
+    background-image: url(../../assets/images/more/top-header-bg-01.png);
+    /* position: relative; */
 }
