--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home-bg{
     background-image: url(../../assets/images/more/1.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     
 }
